refactor and updating to java 17